<resources>
    <string name="app_name">fire</string>
    <string name="alreadyaccount">Already have an Account</string>
    <string name="hometitle">HOME</string>
    <string name="Homebody">YOU HAVE SUCCESSFULLY LOGGED IN</string>
    <string name="logout">LOG OUT</string>
    <string name="loginn">LOG IN</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="registernow">Dont have an account?</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="send">Send</string>
    <string name="enter_your_message_here">Enter your message here!</string>
</resources>
